--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">how to build your own website for free</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="false" id="slider-1" data-rv-view="2" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="false" id="slider-1" data-rv-view="2" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
-                <li data-app-prevent-settings="" data-target="#slider-1" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider-1" data-slide-to="1"></li>
+                <li data-app-prevent-settings="" data-target="#slider-1" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider-1" class="" data-slide-to="1"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--bg-adapted item dark center mbr-section--full-height active" style="background-image: url(assets/images/mbr-720x1080.jpg);">
@@ -60,7 +60,7 @@
                                 <div class=" col-md-offset-1 col-md-6">  
 
                                 <div class="mbr-hero">
-                                    <h1 class="mbr-hero__text">Cloud City is under construction by the builder - MOBIRISE</h1>
+                                    <h1 class="mbr-hero__text">Cloud City is under construction by the builder - CT builder</h1>
 
                                     <p class="mbr-hero__subtext"><em>The new city is being built with the state of the art cloud technologies that intend to assist the citizens to live in peace, safe and clean town that full with love and care.&nbsp;</em><br><br><em><br></em></p>
                                 </div>
@@ -69,7 +69,7 @@
                             </div>
                         </div>
                     </div>
-                </div><div class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--bg-adapted item dark center mbr-section--full-height" style="background-image: url(assets/images/slide2.jpg);">
+                </div><div class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--bg-adapted item dark center mbr-section--full-height" style="background-image: url(assets/images/mbr-1-720x1080.jpg);">
                     <div class="mbr-box__magnet mbr-box__magnet--center-left mbr-box__magnet--sm-padding mbr-after-navbar">
                                             
                         <div class=" container">
@@ -78,11 +78,11 @@
                                 <div class=" col-md-offset-1 col-md-6">  
 
                                 <div class="mbr-hero">
-                                    <h1 class="mbr-hero__text">Slide 2</h1>
+                                    <h1 class="mbr-hero__text">About Us</h1>
 
-                                    <p class="mbr-hero__subtext">Mobirise is based on Bootstrap 3 - most powerful mobile first framework. Use any bootstrap themes with no extra work.</p>
+                                    <p class="mbr-hero__subtext">We, the cloud city's citizens believe that technologies will bring us &nbsp;love and peace living instead of depending on them. We believe in using environmentally technologies to help us to perform our work effectively and efficiently so that we could spend quality life with our families and friends.&nbsp;<br><br>Our plan is to carefully build the infrastructures in the town follow the dream of the cloud citizens' dream. The architecure is currently designing the infrastructure for an advanced city with love in mind. Love ourself, love our family and love the environment.&nbsp;<br><br><br><br><br></p>
                                 </div>
-                                <div class="mbr-buttons btn-inverse mbr-buttons--left"><a class="mbr-buttons__btn btn btn-lg btn-danger" href="https://mobirise.com">FOR WINDOWS</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="https://mobirise.com">FOR MAC</a></div>
+                                
                                 </div>
                             </div>
                         </div>
