--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse mbr-navbar--transparent" id="menu-0" data-rv-view="0">
+<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse mbr-navbar--transparent" id="menu-0" data-rv-view="57">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -34,7 +34,7 @@
                 <div class="mbr-navbar__column mbr-navbar__menu">
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
                         <div class="mbr-navbar__column">
-                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="https://mobirise.com">HOME</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="https://mobirise.com">ABOUT</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="https://mobirise.com">CONTACT</a></li></ul>                            
+                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#slider-1">HOME</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="page1.html#content5-9">ABOUT</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="https://mobirise.com">CONTACT</a></li></ul>                            
                             
                         </div>
                     </nav>
@@ -44,11 +44,11 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="false" id="slider-1" data-rv-view="2" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co/h">make a website</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="false" id="slider-1" data-rv-view="59" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
-                <li data-app-prevent-settings="" data-target="#slider-1" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider-1" class="" data-slide-to="1"></li>
+                <li data-app-prevent-settings="" data-target="#slider-1" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider-1" class="" data-slide-to="1"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--bg-adapted item dark center mbr-section--full-height active" style="background-image: url(assets/images/mbr-720x1080.jpg);">
@@ -80,7 +80,7 @@
                                 <div class="mbr-hero">
                                     <h1 class="mbr-hero__text">About Us</h1>
 
-                                    <p class="mbr-hero__subtext">We, the cloud city's citizens believe that technologies will bring us &nbsp;love and peace living instead of depending on them. We believe in using environmentally technologies to help us to perform our work effectively and efficiently so that we could spend quality life with our families and friends.&nbsp;<br><br>Our plan is to carefully build the infrastructures in the town follow the dream of the cloud citizens' dream. The architecure is currently designing the infrastructure for an advanced city with love in mind. Love ourself, love our family and love the environment.&nbsp;<br><br><br><br><br></p>
+                                    <p class="mbr-hero__subtext">We, the cloud city's citizens believe that technologies will bring us &nbsp;love and peace living instead of depending on them. We believe in using environmentally technologies to help us to perform our work effectively and efficiently so that we could spend quality life with our families and friends.&nbsp;<br><br>Our plan is to carefully build the infrastructures in the town follow the dream of the cloud citizens' dream. The architecure is currently designing the infrastructure for this advanced yet&nbsp;<br><br><br><br><br></p>
                                 </div>
                                 
                                 </div>
