--- a/page1.html
+++ b/page1.html
@@ -19,7 +19,7 @@
   
 </head>
 <body>
-<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse mbr-navbar--transparent" id="menu-4" data-rv-view="30">
+<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse mbr-navbar--transparent" id="menu-4" data-rv-view="18">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -43,7 +43,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background mbr-after-navbar" id="content5-9" data-rv-view="81" style="background-image: url(assets/images/mbr-1-720x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/c">free web maker</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background mbr-after-navbar" id="content5-9" data-rv-view="20" style="background-image: url(assets/images/mbr-1-720x1080.jpg);">
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(40, 50, 78);"></div>
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -64,7 +64,7 @@
     
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts3-a" data-rv-view="96" style="background-color: rgb(204, 204, 204);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts3-a" data-rv-view="23" style="background-color: rgb(204, 204, 204);">
     
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
@@ -83,7 +83,7 @@ Email: inqueries@ct-infotech.com<br><br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="DPPBy8MuLCHia1wgeth1xL8Z2eAlFf/32nNuc3skItzwZjSlAM36iaQl5vzEGkz2cWMpM9vfayxxeaVpSUtMqDlpAxt9Adyn73FL8EGnUbMgooBhejbMqz+U8ejcYzgj" data-form-email="true">
+                    <input type="hidden" value="iRW0eUMcpod25+tX2bToxtyXAxNlpxrz8zWgTshRIrxWtfOB+thaDJCmwVC4lHCy+ScKGKuAH5DilG27BoepzZILJWHeoRAu//VAR1XvcEpQTLrW/+dWDpJYT8xLBQ5x" data-form-email="true">
                     <div class="form-group">
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" placeholder="Name*" data-form-field="Name">
                     </div>
