--- a/page1.html
+++ b/page1.html
@@ -33,7 +33,7 @@
                 <div class="mbr-navbar__column mbr-navbar__menu">
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
                         <div class="mbr-navbar__column">
-                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#header1-d">HOME</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="page1.html#content5-9">ABOUT</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="https://mobirise.com">CONTACT</a></li></ul>                            
+                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#header1-d">HOME</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="page1.html#content5-9">ABOUT</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="page1.html#contacts3-a">CONTACT</a></li></ul>                            
                             
                         </div>
                     </nav>
@@ -43,7 +43,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background mbr-after-navbar" id="content5-9" data-rv-view="20" style="background-image: url(assets/images/mbr-1-720x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/b">web site creator</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background mbr-after-navbar" id="content5-9" data-rv-view="20" style="background-image: url(assets/images/mbr-1-720x1080.jpg);">
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(40, 50, 78);"></div>
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -83,7 +83,7 @@ Email: inqueries@ct-infotech.com<br><br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="BmDM084CEXvAG0bswSyEHc5FH5q4PctDUKi68xt1ChVmjw29uHroe53U6k3N4CRr+hhK1mCsthnyMmcT8Y2PYWutF8dUC2XsddyZ9Tu5vUuK2/FdZq12zrK+lh6MAViw" data-form-email="true">
+                    <input type="hidden" value="3Gm7SWbQhQhlssNPBFCScWvfkbc4UTj1xoeluaEnDAJqjOvGaqSkWOvHLMwl6udrytpAB638+XIcDsPpDKNCF3tJqn8B2DCJtyJlyXeALrjjUPcUSxuUI2dtEZntv3iF" data-form-email="true">
                     <div class="form-group">
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" placeholder="Name*" data-form-field="Name">
                     </div>
