--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="mbr-navbar__column mbr-navbar__menu">
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
                         <div class="mbr-navbar__column">
-                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#header1-d">HOME</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="page1.html#content5-9">ABOUT</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="page1.html#contacts3-a">CONTACT</a></li> </ul>                            
+                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#header1-d">HOME</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="page2.html#content5-s">LIBRARY<br></a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="page1.html#content5-9">ABOUT</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="page1.html#contacts3-a">CONTACT</a></li> </ul>                            
                             
                         </div>
                     </nav>
@@ -44,7 +44,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header1-d" data-rv-view="2" style="background-image: url(assets/images/mbr-720x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/d">free website software</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header1-d" data-rv-view="2" style="background-image: url(assets/images/mbr-720x1080.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
         <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(34, 34, 34);"></div>
         <div class="mbr-box__container mbr-section__container container">
